package com.example.beta;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

/**
 * The type Credits.
 */
public class Credits extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_credits);
    }
}