@startuml

title __BETA.APP's Class Diagram__\n

  namespace com.example.beta {
    class com.example.beta.BuildConfig {
    }
  }
  

  namespace com.example.beta {
    class com.example.beta.Credits {
    }
  }
  

  namespace com.example.beta {
    class com.example.beta.EuidC {
    }
  }
  

  namespace com.example.beta {
    class com.example.beta.Expenses {
    }
  }
  

  namespace com.example.beta {
    class com.example.beta.FBref {
    }
  }
  

  namespace com.example.beta {
    class com.example.beta.Graphs {
    }
  }
  

  namespace com.example.beta {
    class com.example.beta.Incomes {
    }
  }
  

  namespace com.example.beta {
    class com.example.beta.IncomesC {
    }
  }
  

  namespace com.example.beta {
    class com.example.beta.MainActivity {
    }
  }
  

  namespace com.example.beta {
    class com.example.beta.PersonalArea {
    }
  }
  

  namespace com.example.beta {
    class com.example.beta.UserC {
    }
  }
  

  namespace com.example.beta {
    class com.example.beta.expensesC {
    }
  }
  

  com.example.beta.Credits -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.beta.Expenses -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.beta.Expenses o-- com.example.beta.expensesC : exp
  com.example.beta.Graphs -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.beta.Incomes -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.beta.Incomes o-- com.example.beta.IncomesC : inc
  com.example.beta.IncomesC .up.|> java.io.Serializable
  com.example.beta.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.beta.MainActivity o-- com.example.beta.UserC : userdb
  com.example.beta.PersonalArea -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.beta.PersonalArea o-- com.example.beta.UserC : user
  com.example.beta.expensesC .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
